taskApi: moved error response to common, updated swagger
